[package]
name = "lava_floor_remake"
version = "0.1.0"
authors = ["Troligtvis <karljohan@codefork.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
nphysics2d = "0.14.0"
ncollide2d = "0.22"
nalgebra = "0.20"